--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,13 @@
   <body>
     <header>
       <h1>{{ site.title }}</h1>
+      <p class="subtitle">{{ site.description }}</p>
+      <nav>
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/tips">Study Tips</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       {{ content }}
